# sql-query-env

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  pyproject.toml
scripts/: test_easy.py  test_hard.py  test_medium.py
server/: Dockerfile  app.py  database.py  environment.py  tasks.py
